@@ -147,14 +147,10 @@ main(int argc, char** argv)
     
     option_context = g_option_context_new(PACKAGE);
 
-#ifdef ENABLE_NLS
     bindtextdomain (GETTEXT_PACKAGE, NWAM_MANAGER_LOCALEDIR);
     bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
     textdomain (GETTEXT_PACKAGE);
     g_option_context_add_main_entries(option_context, application_options, GETTEXT_PACKAGE);
-#else
-    g_option_context_add_main_entries(option_context, application_options, NULL);
-#endif
 
     /* Initialise Thread Support */
     g_thread_init( NULL );
