@@ -23,9 +23,17 @@ AC_LANG_C
 AC_ISC_POSIX
 AC_HEADER_STDC
 AM_DISABLE_STATIC
-AM_PROG_LIBTOOL
-
 AC_TYPE_SIGNAL
+
+dnl
+dnl Internationalization
+dnl
+AM_PROG_LIBTOOL
+ALL_LINGUAS="`grep -v '^#' "$srcdir/po/LINGUAS" | tr '\n' ' '`"
+GETTEXT_PACKAGE="$PACKAGE"
+AC_SUBST(GETTEXT_PACKAGE)
+AM_GLIB_GNU_GETTEXT
+AM_GLIB_DEFINE_LOCALEDIR(NWAM_MANAGER_LOCALEDIR)
 
 dnl
 dnl Warning flags
