@@ -1,3 +1,9 @@
+2009-11-10  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/main.c (main):
+	* configure.in:
+	* daemon/main.c (main): Added l10n support
+
 2009-11-09  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/nwam_conn_conf_ip_panel.c
